# sudoku_oop

./: .gitignore  CMakeLists.txt  LLH.cpp  LLH.h  MoveData.cpp  MoveData.h  MoveHistory.cpp  MoveHistory.h  MoveRecord.cpp  MoveRecord.h  README.md  Selector.cpp  Selector.h  Solver.cpp  Solver.h  SudokuIO.cpp  SudokuIO.h  board.cpp  board.h  main.cpp  readme.txt  run_experiments  specs.json
acceptors/: adaptiveIterationLimitedThresholdAccepting.cpp  adaptiveIterationLimitedThresholdAccepting.h  improveOrEqual.cpp  improveOrEqual.h  onlyImprove.cpp  onlyImprove.h  simulatedAnnealing.cpp  simulatedAnnealing.h
models/: acceptor.cpp  acceptor.h  selector.cpp  selector.h
operators/: cpoExchange.cpp  insert.cpp  insertSym.cpp  invert.cpp  invertSym.cpp  operators.cpp  operators.h  swap.cpp  swapConflicting.cpp
procedures/: cpProcedure.cpp  cpProcedure.h
selectors/: greedy.cpp  greedy.h  randomDescent.cpp  randomDescent.h  randomPermutation.cpp  randomPermutation.h  randomPermutationDescent.cpp  randomPermutationDescent.h  reinforcementLearning.cpp  reinforcementLearning.h  simpleRandom.cpp  simpleRandom.h
utils/: boardUtils.cpp  boardUtils.h  generalUtils.cpp  generalUtils.h
